# pub-sub-rust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-better-layers  Dockerfile-no-optimizing  README.md  docker-compose.yml
src/: client.rs  command.rs  element.rs  frame.rs  handler.rs  main.rs  observable_collection.rs  observer.rs  serialize.rs  store.rs  tests.rs  ws.rs
test/: generator.js
