[package]
name = "pub-sub-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", features = ["full"] }
bytes = "1"
warp = "0.3.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
tokio-stream = "0.1.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.8.4"